# OceanWatch

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
configs/: README.md  default_config.json
data/sample/: protected_areas.csv  sample_ais.csv
docs/: anomaly_detection.md  architecture.md  configuration.md  feature_engineering.md  future_work.md  geospatial_methods.md  protected_area_proximity.md  risk_model.md  system_architecture.md  testing.md
include/oceanwatchai/: AISPoint.hpp  AisCsvLoader.hpp  AnalysisConfig.hpp  FeatureExtractor.hpp  GeospatialUtils.hpp  ProtectedArea.hpp  ProtectedAreaProximity.hpp  ReportWriter.hpp  RiskScoringEngine.hpp  StatisticalAnomalyDetector.hpp  TrackFeatures.hpp  VesselTrack.hpp
src/: AisCsvLoader.cpp  AnalysisConfig.cpp  FeatureExtractor.cpp  GeospatialUtils.cpp  ProtectedAreaProximity.cpp  ReportWriter.cpp  RiskScoringEngine.cpp  StatisticalAnomalyDetector.cpp  VesselTrack.cpp  main.cpp
tests/: AnalysisConfigTests.cpp  CMakeLists.txt  CliConfigIntegrationTest.cmake  CsvLoaderTests.cpp  FeatureExtractorTests.cpp  GeospatialUtilsTests.cpp  ProtectedAreaProximityTests.cpp  ReportWriterTests.cpp  RiskScoringEngineTests.cpp  StatisticalAnomalyDetectorTests.cpp
